--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".Add_Task_Activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -27,14 +24,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Main3Activity"
-            android:label="@string/title_activity_main3"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Main4Activity" />
-        <activity
             android:name=".TaskList_Activity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".child_list_activity"
+        <activity android:name=".ChildList_activity"
             android:theme="@style/AppTheme.NoActionBar"
             ></activity>
     </application>
