--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,11 @@
         </activity>
         <activity
             android:name=".TaskList_Activity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".ChildList_activity"
-            android:theme="@style/AppTheme.NoActionBar"
-            ></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ChildList_activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Update_Task_Activity"></activity>
     </application>
 
 </manifest>
